[metadata]
name = yuque-tools
summary = Tools for yuque exporter
author = Ray Sun<xiaoquqi@gmail.com>
python_requires = >=3.8
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[files]
packages =
    yuque_tools

[entry_points]
console_scripts =
    yuque-images-downloader = yuque_tools.yuque_images_downloader:main
    yuque-markdown-formatter = yuque_tools.yuque_markdown_formatter:main
